vpc_routing_tables.tf
resource "aws_route_table" "rt_internet_gateway" {
  vpc_id = "${aws_vpc.main.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.default.id}"
  }
}

resource "aws_route_table_association" "rta_public_subnet" {
  count          = "${length(data.aws_availability_zones.allzones.names)}"
  subnet_id      = "${element(aws_subnet.public.*.id, count.index)}"
  route_table_id = "${aws_route_table.rt_internet_gateway.id}"
}

resource "aws_route_table" "rt_nat_gateway" {
  vpc_id = "${aws_vpc.main.id}"

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = "${aws_nat_gateway.nat_gateway.id}"
  }
}

resource "aws_route_table_association" "rta_private_subnet" {
  count          = "${length(data.aws_availability_zones.allzones.names)}"
  subnet_id      = "${element(aws_subnet.private.*.id, count.index)}"
  route_table_id = "${aws_route_table.rt_nat_gateway.id}"
}
